[gd_scene load_steps=43 format=3 uid="uid://ecrpsuk7buqt"]

[ext_resource type="Texture2D" uid="uid://cp2h31a1d7du6" path="res://arenas/groundnoise.tres" id="1_eb0w6"]
[ext_resource type="Script" path="res://arenas/mouse_selector.gd" id="1_kjksx"]
[ext_resource type="Shader" path="res://materials/postprocess_outline.gdshader" id="1_toekv"]
[ext_resource type="Script" path="res://objects/camera_3d.gd" id="2_cslmb"]
[ext_resource type="Script" path="res://addons/phantom_camera/scripts/phantom_camera/phantom_camera_3d.gd" id="2_eaxvd"]
[ext_resource type="Script" path="res://actors/world_bounds.gd" id="3_lcykb"]
[ext_resource type="Script" path="res://addons/phantom_camera/scripts/resources/tween_resource.gd" id="3_lsp1g"]
[ext_resource type="Script" path="res://addons/phantom_camera/scripts/phantom_camera_host/phantom_camera_host.gd" id="3_xfoq2"]
[ext_resource type="PackedScene" uid="uid://d4frkvr1sojv5" path="res://actors/tri_animal.tscn" id="9_2107o"]
[ext_resource type="PackedScene" uid="uid://cng3sdabbh2gw" path="res://actors/plant.tscn" id="10_3o4ri"]
[ext_resource type="PackedScene" uid="uid://b5s47fmhbn7m6" path="res://actors/flap_clap.tscn" id="10_ldpwe"]
[ext_resource type="Script" path="res://scripts/pickable.gd" id="12_elay6"]
[ext_resource type="Script" path="res://scripts/droppable_logic.gd" id="13_rhjl3"]
[ext_resource type="PackedScene" uid="uid://decgytchkqq7p" path="res://models/tree.blend" id="14_xc82r"]
[ext_resource type="Script" path="res://scripts/camera_switcher.gd" id="16_kio3u"]
[ext_resource type="Script" path="res://actors/player.gd" id="17_xvw61"]
[ext_resource type="PackedScene" uid="uid://dsct084grrw4j" path="res://actors/player/human_explorer.tscn" id="18_o123w"]
[ext_resource type="Script" path="res://ui/fps_counter.gd" id="19_s72fw"]
[ext_resource type="Script" path="res://scripts/mouse_3d.gd" id="19_uhljy"]

[sub_resource type="Environment" id="Environment_ckg05"]
ambient_light_source = 3

[sub_resource type="ShaderMaterial" id="ShaderMaterial_eo5eu"]
render_priority = 0
shader = ExtResource("1_toekv")
shader_parameter/outlineColor = Color(0, 0, 0, 1)
shader_parameter/depth_threshold = 0.025
shader_parameter/normal_threshold = 0.5
shader_parameter/normal_smoothing = 0.25
shader_parameter/max_thickness = 1.65
shader_parameter/min_thickness = 0.8
shader_parameter/max_distance = 75.0
shader_parameter/min_distance = 2.0
shader_parameter/grazing_fresnel_power = 5.0
shader_parameter/grazing_angle_mask_power = 1.0
shader_parameter/grazing_angle_modulation_factor = 50.0

[sub_resource type="QuadMesh" id="QuadMesh_bu2rm"]
material = SubResource("ShaderMaterial_eo5eu")
flip_faces = true
size = Vector2(10, 10)

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_bv01g"]

[sub_resource type="BoxShape3D" id="BoxShape3D_qfpdu"]
size = Vector3(100, 1, 100)

[sub_resource type="FastNoiseLite" id="FastNoiseLite_w5lio"]

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_ag16o"]
noise = SubResource("FastNoiseLite_w5lio")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_s57ir"]
albedo_color = Color(1, 0.635294, 0.329412, 1)
metallic_specular = 0.19
roughness_texture = SubResource("NoiseTexture2D_ag16o")
normal_texture = ExtResource("1_eb0w6")
heightmap_scale = 3.845
heightmap_texture = ExtResource("1_eb0w6")
subsurf_scatter_strength = 0.78

[sub_resource type="BoxMesh" id="BoxMesh_hflk2"]
lightmap_size_hint = Vector2i(404, 216)
material = SubResource("StandardMaterial3D_s57ir")
add_uv2 = true
size = Vector3(40, 1, 40)

[sub_resource type="BoxMesh" id="BoxMesh_43ohp"]
size = Vector3(1, 10, 100)

[sub_resource type="BoxMesh" id="BoxMesh_sxxet"]
size = Vector3(120, 10, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_v71wc"]
size = Vector3(1, 10, 100)

[sub_resource type="BoxShape3D" id="BoxShape3D_d0vvu"]
size = Vector3(120, 10, 1)

[sub_resource type="Resource" id="Resource_i1rmk"]
script = ExtResource("3_lsp1g")
duration = 1.0
transition = 0
ease = 2

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_r3nlb"]
albedo_color = Color(0, 1, 1, 1)

[sub_resource type="PrismMesh" id="PrismMesh_bcvey"]
material = SubResource("StandardMaterial3D_r3nlb")
size = Vector3(0.2, 0.2, 0.5)

[sub_resource type="PrismMesh" id="PrismMesh_lkhwp"]
size = Vector3(0.1, 0.1, 0.1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_sh0mn"]
albedo_color = Color(0.682353, 0.482353, 0.466667, 1)

[sub_resource type="BoxMesh" id="BoxMesh_t3kuj"]
material = SubResource("StandardMaterial3D_sh0mn")
size = Vector3(20, 0.2, 1)

[sub_resource type="TorusMesh" id="TorusMesh_5c0hk"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_kpifr"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_ij2q4"]

[sub_resource type="PlaneMesh" id="PlaneMesh_iokyu"]

[node name="PlayerArenaSandbox" type="Node3D"]

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_ckg05")

[node name="GodCamera" type="Camera3D" parent="."]
transform = Transform3D(-4.37114e-08, 0.866025, -0.5, 0, 0.5, 0.866025, 1, 3.78552e-08, -2.18557e-08, -13.0091, 15.6584, 0)
current = true
fov = 80.0
size = 25.0

[node name="MoebiusShader" type="MeshInstance3D" parent="GodCamera"]
transform = Transform3D(-1, 2.14378e-08, -1.45851e-07, -1.70416e-08, 0.965926, 0.258819, 1.46429e-07, 0.258819, -0.965926, 0, 0, -2)
visible = false
mesh = SubResource("QuadMesh_bu2rm")
skeleton = NodePath("../..")

[node name="MouseSelector" type="Node" parent="GodCamera"]
script = ExtResource("1_kjksx")

[node name="Ground" type="StaticBody3D" parent="."]
collision_layer = 129
physics_material_override = SubResource("PhysicsMaterial_bv01g")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Ground"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0)
shape = SubResource("BoxShape3D_qfpdu")

[node name="GroundMesh" type="MeshInstance3D" parent="Ground"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0)
mesh = SubResource("BoxMesh_hflk2")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Ground"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 20.6567, 0, 0)
visible = false
mesh = SubResource("BoxMesh_43ohp")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="Ground"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -21.6384, 0, 0)
visible = false
mesh = SubResource("BoxMesh_43ohp")

[node name="MeshInstance3D3" type="MeshInstance3D" parent="Ground"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.364376, 0, 24.6498)
visible = false
mesh = SubResource("BoxMesh_sxxet")

[node name="MeshInstance3D4" type="MeshInstance3D" parent="Ground"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.364376, 0, -33.1469)
visible = false
mesh = SubResource("BoxMesh_sxxet")

[node name="WorldBounds" type="StaticBody3D" parent="."]
collision_layer = 65
script = ExtResource("3_lcykb")

[node name="CollisionShape3D2" type="CollisionShape3D" parent="WorldBounds"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -20, 0, 0)
shape = SubResource("BoxShape3D_v71wc")

[node name="CollisionShape3D3" type="CollisionShape3D" parent="WorldBounds"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 20, 0, 0)
shape = SubResource("BoxShape3D_v71wc")

[node name="CollisionShape3D4" type="CollisionShape3D" parent="WorldBounds"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 20)
shape = SubResource("BoxShape3D_d0vvu")

[node name="CollisionShape3D5" type="CollisionShape3D" parent="WorldBounds"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -20)
shape = SubResource("BoxShape3D_d0vvu")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.31352, 0.778988, -0.543032, 0.389494, 0.627039, 0.674623, 0.866025, 0, -0.5, 0, 10, 0)
shadow_enabled = true

[node name="PhantomCamera3D" type="Node3D" parent="."]
process_mode = 4
transform = Transform3D(0.999592, 0, 0, 0, 0.999999, 0, 0, 0, 0.999657, 0, 3, -13.7596)
top_level = true
visible = false
script = ExtResource("2_eaxvd")
follow_mode = 2
look_at_mode = 1
tween_resource = SubResource("Resource_i1rmk")
follow_offset = Vector3(0, 3, -3)

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3, -13.7596)
visible = false
script = ExtResource("2_cslmb")

[node name="PhantomCameraHost" type="Node" parent="Camera3D"]
process_priority = 300
process_physics_priority = 300
script = ExtResource("3_xfoq2")

[node name="PhantomCameraLider" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.965926, -0.258819, 0, 0.258819, 0.965926, 0, 1.6, -15.7596)

[node name="MeshInstance3D" type="MeshInstance3D" parent="PhantomCameraLider"]
mesh = SubResource("PrismMesh_bcvey")

[node name="Fauna" type="Node" parent="."]

[node name="TriAnimal2" parent="Fauna" instance=ExtResource("9_2107o")]
transform = Transform3D(0.979424, 0, -0.201813, 0, 1, 0, 0.201813, 0, 0.979424, -7.42037, 0, -11.8839)

[node name="TriAnimal5" parent="Fauna" instance=ExtResource("9_2107o")]
transform = Transform3D(0.979424, 0, -0.201813, 0, 1, 0, 0.201813, 0, 0.979424, -7.42037, 0, 8.72743)

[node name="TriAnimal3" parent="Fauna" instance=ExtResource("9_2107o")]
transform = Transform3D(0.908085, 0, 0.418787, 0, 1, 0, -0.418787, 0, 0.908085, -6.29607, 0, -6.37483)

[node name="TriAnimal4" parent="Fauna" instance=ExtResource("9_2107o")]
transform = Transform3D(0.823008, 0, 0.568031, 0, 1, 0, -0.568031, 0, 0.823008, 0, 0, -10.7596)

[node name="FlapClap" parent="Fauna" instance=ExtResource("10_ldpwe")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.482879, -5)

[node name="FlapClap2" parent="Fauna" instance=ExtResource("10_ldpwe")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.95061, -0.492671, -6.57366)

[node name="FlapClap3" parent="Fauna" instance=ExtResource("10_ldpwe")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4.52427, -0.492671, -9.4587)

[node name="FlapClap4" parent="Fauna" instance=ExtResource("10_ldpwe")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5.44223, -0.492671, -2.90179)

[node name="FlapClap5" parent="Fauna" instance=ExtResource("10_ldpwe")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.86858, -0.492671, -9.85211)

[node name="FlapClap6" parent="Fauna" instance=ExtResource("10_ldpwe")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 7.93386, -0.492671, -9.58983)

[node name="Attrezzo" type="Node" parent="."]

[node name="tree" parent="Attrezzo" instance=ExtResource("14_xc82r")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.66489, -0.5, -1.32291)

[node name="RotationTarget" type="Marker3D" parent="Attrezzo"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 0.0827737, -14)

[node name="MeshInstance3D" type="MeshInstance3D" parent="Attrezzo/RotationTarget"]
mesh = SubResource("PrismMesh_lkhwp")

[node name="Plant4" parent="Attrezzo" instance=ExtResource("10_3o4ri")]

[node name="Plant2" parent="Attrezzo" instance=ExtResource("10_3o4ri")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 7.10217, 0, 10.5263)

[node name="Plant3" parent="Attrezzo" instance=ExtResource("10_3o4ri")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4.80711, 0, 12.9817)

[node name="Shelf" type="Node3D" parent="."]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -14, 6, 0)

[node name="Plant" parent="Shelf" instance=ExtResource("10_3o4ri")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.297706, 0.937195, 0)
is_shelf = true

[node name="Pickable" type="Node" parent="Shelf/Plant"]
script = ExtResource("12_elay6")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Shelf"]
mesh = SubResource("BoxMesh_t3kuj")

[node name="DroppableLogic" type="Node3D" parent="." node_paths=PackedStringArray("dropped_parent_anchor")]
script = ExtResource("13_rhjl3")
dropped_parent_anchor = NodePath("../Fauna")

[node name="DropMarker" type="Marker3D" parent="DroppableLogic"]
transform = Transform3D(2, 0, 0, 0, 2, 0, 0, 0, 2, -10.32, 7.84555, 0)
gizmo_extents = 0.5

[node name="MeshInstance3D" type="MeshInstance3D" parent="DroppableLogic/DropMarker"]
visible = false
mesh = SubResource("TorusMesh_5c0hk")

[node name="PanelContainer" type="PanelContainer" parent="."]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 83.0
grow_horizontal = 2
size_flags_vertical = 0

[node name="GodButton" type="CheckButton" parent="PanelContainer"]
layout_mode = 2
size_flags_horizontal = 0
button_pressed = true
text = "Godmode"

[node name="Label" type="Label" parent="PanelContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 60
text = "test"

[node name="FPSCounter" type="Label" parent="PanelContainer"]
layout_mode = 2
size_flags_horizontal = 8
text = "10 FPS"
script = ExtResource("19_s72fw")

[node name="CameraSwitcher" type="Node" parent="." node_paths=PackedStringArray("godcamera")]
script = ExtResource("16_kio3u")
godcamera = NodePath("../GodCamera")

[node name="Player" type="CharacterBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.417645, 14.0681)
script = ExtResource("17_xvw61")

[node name="human_explorer" parent="Player" instance=ExtResource("18_o123w")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.09892, 0)

[node name="MeshInstance3D" type="MeshInstance3D" parent="Player"]
visible = false
mesh = SubResource("CapsuleMesh_kpifr")
skeleton = NodePath("../..")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Player"]
shape = SubResource("CapsuleShape3D_ij2q4")

[node name="Mouse3D" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 10.0703)
script = ExtResource("19_uhljy")

[node name="Marker3D" type="Marker3D" parent="Mouse3D"]

[node name="MeshInstance3D" type="MeshInstance3D" parent="Mouse3D/Marker3D"]
mesh = SubResource("PlaneMesh_iokyu")

[connection signal="input_event" from="Shelf/Plant" to="Shelf/Plant/Pickable" method="_on_collision_area_input_event"]
[connection signal="mouse_entered" from="Shelf/Plant" to="Shelf/Plant/Pickable" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Shelf/Plant" to="Shelf/Plant/Pickable" method="_on_mouse_exited"]
[connection signal="picked_up" from="Shelf/Plant" to="DroppableLogic" method="_on_plant_picked_up"]
[connection signal="toggled" from="PanelContainer/GodButton" to="CameraSwitcher" method="_on_god_button_toggled"]
